# arduino

./: README.md  check_usb.py  findstdlib.py  output.txt
.github/workflows/: simulator.yml  workflow-doctor.yml
Arduino/TypthonDemo/: TYPE_ANNOTATION_IMPLEMENTATION.md  TypthonDemo.ino  test_type_annotations.py
Arduino/libraries/HumanReadableApi/: HumanReadableApi.cpp  HumanReadableApi.h  library.properties
Arduino/libraries/TypthonMini/: library.properties
Arduino/libraries/TypthonMini/src/: TypthonMini.cpp  TypthonMini.h
Arduino/lua_bot/: COMPRESSION_SUMMARY.md  EXAMPLES.md  EXAMPLES_README.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  TEST_PLAN.md  examples_games.txt  examples_led_effects.txt  examples_paste_mode.txt  lua_bot.ino
Arduino/starter2/: starter2.ino
Arduino/starter3/: starter3.ino
simulator/: .gitignore  README.md
simulator/backend/: CMakeLists.txt  CMakePresets.json  conanfile.txt
simulator/backend/include/simulator/: board.hpp
simulator/backend/src/: board.cpp  main.cpp
simulator/backend/tests/: smoke.cpp
simulator/frontend/: package-lock.json  package.json
simulator/frontend/components/: PinGrid.tsx
simulator/frontend/pages/: _app.tsx  index.tsx
simulator/frontend/styles/: globals.css
tools/: gha_doctor.py
